<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/activity_organizer_dashboard.xml -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.OrganizerDashboardActivity">

    <!-- Toolbar with title and settings icon -->

    <!-- Facility Name TextView -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="12dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/facilityNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="My Facility"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:text="Your Events"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/eventsListView"
                android:layout_width="match_parent"
                android:layout_height="408dp"
                android:layout_marginTop="8sp"
                android:layout_weight="1"
                android:background="#9eb3c2"
                android:cacheColorHint="#000000"
                android:textColor="#000000"
                android:padding="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_go_to_facility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="Manage Facility"
                    android:background="@drawable/search_view_bg"
                    android:textSize="16sp"
                    app:cornerRadius="8dp" />

                <Button
                    android:id="@+id/createEventButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="Create Event"
                    android:textSize="16sp"
                    android:background="@drawable/search_view_bg"
                    app:cornerRadius="8dp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/sandwich"
        app:headerLayout="@layout/nav_header" />
</androidx.drawerlayout.widget.DrawerLayout>
