...
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:paddingBottom="16dp"
        app:srcCompat="@drawable/ic_factory" />

    <EditText
        android:id="@+id/editTextFacilityName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/search_view_bg"
        android:hint="  Enter facility name"
...
