<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.AdminDashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/browse_event_icon"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:background="@drawable/admin_dashboard_shape"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_event" />

            <Button
                android:id="@+id/browse_event_btn"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="Browse Events"
                android:textColor="@color/white"
                app:cornerRadius="10dp" />

            <ImageView
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/admin_dashboard_shape"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_youth" />

            <Button
                android:id="@+id/browse_profile_btn"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="Browse Profiles"
                android:textColor="@color/white"
                app:cornerRadius="10dp"/>

            <ImageView
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/admin_dashboard_shape"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_gallery" />

            <Button
                android:id="@+id/browse_image_btn"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="Browse Images"
                android:textColor="@color/white"
                app:cornerRadius="10dp"/>

            <ImageView
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/admin_dashboard_shape"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_factory" />

            <Button
                android:id="@+id/browse_facility_btn"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="Browse Facilities"
                android:textColor="@color/white"
                app:cornerRadius="10dp"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/sandwich"
        app:headerLayout="@layout/nav_header" />
</androidx.drawerlayout.widget.DrawerLayout>