<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/browse_event_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:text="BROWSE EVENTS"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/event_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_view_bg"
        app:defaultQueryHint="Search Events"
        app:iconifiedByDefault="false" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_admin_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerVertical"
        android:dividerHeight="4dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/event_item" />

</LinearLayout>
