<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/browse_facility_text"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:text="Browse Facilities"
        android:textAlignment="textStart"
        android:textSize="25sp" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/facility_search_bar"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/search_view_bg"
        android:textColor="#FFFFFF"
        app:defaultQueryHint="Search Facilities"
        app:iconifiedByDefault="false" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/facility_admin_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerVertical"
        android:dividerHeight="8dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/facility_item"/>

</LinearLayout>