<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/browse_image_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Browse Images"
            android:textAlignment="textStart"
            android:textSize="25sp" />

        <Button
            android:id="@+id/delete_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete Image"
            android:visibility="invisible" />
    </LinearLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/image_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/search_view_bg"
        android:textColor="#FFFFFF"
        app:defaultQueryHint="Search For User's Images"
        app:iconifiedByDefault="false" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/image_admin_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerVertical"
        android:dividerHeight="8dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/image_item" />

</LinearLayout>